# micro_ml

./: .gitignore  Dockerfile.inference  Dockerfile.training  README.md  docker-compose.yaml  justfile  pyproject.toml
.github/workflows/: ci.yaml
src/micro_ml/: __init__.py
src/micro_ml/conf/: config.yaml
src/micro_ml/conf/feature/: feature.yaml
src/micro_ml/conf/inference/: inference.yaml
src/micro_ml/conf/training/: training.yaml
src/micro_ml/data/raw/: raw_data.parquet
src/micro_ml/entrypoints/: inference_endpoint.py  training_endpoint.py
src/micro_ml/pipelines/: feature_engineering.py  inference.py  training.py
src/micro_ml/scripts/: evaluate.py  load.py  train.py  transform.py  utils.py
